fixed overflow

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,3 +13,7 @@
     color: #33C397;
 }
 
+.container-fluid{
+    overflow-y:auto !important;
+    padding:0;
+}
